fixing bug - whitespace at the bottom of the get started screen

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -70,9 +70,6 @@ body.get-started,
 body.location-details {
   background: url(/src/assets/images/BHP_Home_Image.png);
 }
-body.get-started {
-  height: 108vh;
-}
 .nav-link {
   color: var(--TextColorBlack);
 }
